cleaned up some small spacing issues

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,23 +1,90 @@
 @import 'variables.scss';
-
 * {
-  -webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -25,94 +92,116 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 	font-family: 'Noto Sans', sans-serif !important;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 a {
 	text-decoration: inherit;
 	&:visited {
 		text-decoration: inherit;
 		color: $white !important;
-  }
+	}
 }
 
 .container {
-	margin:0;
+	margin: 0;
 	@include breakpoint(sm) {
 		margin-left: 4%;
 		margin-right: 4%;
 	}
-	@include breakpoint(lg){
+	@include breakpoint(lg) {
 		margin-left: 12%;
-		margin-right:12%; 
+		margin-right: 12%;
 	}
 }
+
 .button {
 	text-align: center;
 	transition: 0.2s ease;
 	cursor: pointer;
-	border-radius:0px;
-	@include breakpoint(sm){
+	border-radius: 0px;
+	@include breakpoint(sm) {
 		font-size: 1.1em;
 	}
 }
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-	.buyselltrade {
 
-		&-merch{
+@media screen and (-ms-high-contrast: active),
+(-ms-high-contrast: none) {
+	.buyselltrade {
+		&-merch {
 			display: block;
 			position: relative;
-			width:99%;
+			width: 99%;
 			margin: 10px;
 			height: 50px;
 			overflow: hidden;
-			@include breakpoint(sm){		
+			@include breakpoint(sm) {
 				margin-top: 35px;
 				@include absolutecenter(x);
 				position: relative;
 				width: 50%;
 			}
 			&-button {
-				width:50%;
-				@include breakpoint(sm){
+				width: 50%;
+				@include breakpoint(sm) {
 					width: 100%;
 				}
 			}
 			&-card {
-					height: 100%;
-					@include breakpoint(sm){
+				height: 100%;
+				@include breakpoint(sm) {
 					transition: 0.3s ease;
 					transform: translateY(0);
-					}
-					&:hover{
-						@include breakpoint(sm){
+				}
+				&:hover {
+					@include breakpoint(sm) {
 						transition: 0.2s ease;
 						transform: translateY(0px);
-						}
 					}
+				}
 			}
-
 			&-icon {
 				i {
 					margin-right: 30px;
@@ -123,12 +212,12 @@ a {
 		&-title {
 			font-size: 1em;
 			padding-bottom: 20px;
-			&-text{
+			&-text {
 				display: inline-block;
-				zoom:1;
+				zoom: 1;
 				padding: 5px;
 				font-size: 1.5em;
-				@include breakpoint(sm){
+				@include breakpoint(sm) {
 					font-size: 1.5em;
 				}
 			}
@@ -136,17 +225,17 @@ a {
 		&-about-button {
 			margin-bottom: 20px;
 		}
-		&-contact{
-			&-info{
-				&-number{
-					a{
+		&-contact {
+			&-info {
+				&-number {
+					a {
 						color: $lightBlue !important;
 					}
 				}
 			}
 		}
 	}
-	.contactinfo{
+	.contactinfo {
 		&-times {
 			padding: 0;
 			margin: 0;
@@ -162,35 +251,31 @@ a {
 		}
 		&-location {
 			a {
-				color:$black !important;
+				color: $black !important;
 			}
-			@include breakpoint(sm){
+			@include breakpoint(sm) {
 				margin-top: 150px;
 			}
 			&-map {
-				@include breakpoint(md){
-				width: 60%;
-				padding-left: 20%;
-				padding-right: 20%;
+				@include breakpoint(md) {
+					width: 60%;
+					padding-left: 20%;
+					padding-right: 20%;
 				}
 			}
 		}
 	}
 	.buyselltrade-grid-merch-card {
-		@include breakpoint(sm){
-		transition: 0.3s ease;
-		transform: translateY(0);
+		@include breakpoint(sm) {
+			transition: 0.3s ease;
+			transform: translateY(0);
 		}
-		&:hover{
-			@include breakpoint(sm){
-			transition: 0.2s ease;
-			transform: translateY(0px);
-			box-shadow: 0 0px 0px rgba(0,0,0,0.3);
+		&:hover {
+			@include breakpoint(sm) {
+				transition: 0.2s ease;
+				transform: translateY(0px);
+				box-shadow: 0 0px 0px rgba(0, 0, 0, 0.3);
 			}
 		}
-}
-.footer {
-	&-contact {
 	}
-}
 }
