--- a/src/styles/buyselltrade.scss
+++ b/src/styles/buyselltrade.scss
@@ -236,7 +236,7 @@
       }
       &-number {
         font-weight: 800;
-        padding: 5px 0px 5px 0px;
+        padding-top: 12px;
         a {
           color: $black;
           text-decoration: underline;
